gcc/testsuite/g++.dg/parse/parameter-declaration-2.C
void f (int i, int p[i]); // { dg-error "use of parameter.*outside function body" }
// { dg-prune-output "array bound" }
